# GiocoDeiPianeti

./: CMakeLists.txt  LICENSE  README.md
Assets/gameData/: buildings.txt  researches.txt  spaceshipParts.txt  spaceships.txt
src/: AStar.h  Animation.cpp  Animation.cpp~  Animation.h  Battle.cpp  Battle.h  BattleMap.cpp  BattleMap.h  BuildTab.cpp  BuildTab.h  Building.cpp  Building.h  BuildingsParser.cpp  BuildingsParser.h  Constants.h  DysonSphere.cpp  DysonSphere.h  EconomicsTab.cpp  EconomicsTab.h  Empire.cpp  Empire.h  EmpireTab.cpp  EmpireTab.h  GUI_Alert.cpp  GUI_Alert.h  GUI_Button.cpp  GUI_Button.h  GUI_Label.cpp  GUI_Label.h  GUI_LoadingBar.cpp  GUI_LoadingBar.h  GUI_Panel.cpp  GUI_Panel.h  Game.cpp  Game.h  GridNode.cpp  GridNode.h  Helper.h  Menu.cpp  Menu.h  (+38 more)
